--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.intellectualsites</groupId>
   <artifactId>plotsquared-expansion</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>2.0.0</version>
   <name>PlotSquared-Expansion</name>
   <description>PlotSquared expansion for the PlaceholderAPI plugin.</description>
   
